<?xml version="1.0" encoding="utf-8"?>
<!--
    	@author Lars Harmsen
		Copyright (c) <2014> <Lars Harmsen - Quchen>
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="30dp" >

    <TextView
        android:id="@+id/tv_current_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/current_score"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_current_score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_current_score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/defaultscore"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_best_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_current_score_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/best_score"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_best_score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tv_current_score_value"
        android:layout_below="@+id/tv_best_score"
        android:layout_marginTop="34dp"
        android:text="@string/defaultscore"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/b_continue"
        style="@style/PrettyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_best_score_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/greybutton"
        android:text="@string/continue_game" />

    <Button
        android:id="@+id/b_finish"
        style="@style/PrettyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_continue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/greybutton"
        android:text="@string/back" />

</RelativeLayout>