<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/compete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/flyer_button"
        android:layout_alignTop="@+id/flyer_button"
        android:layout_marginTop="62dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/compete_button"
        android:src="@drawable/compete_button" />

    <ImageButton
        android:id="@+id/learn_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/compete_button"
        android:layout_below="@+id/compete_button"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/learn_button"
        android:src="@drawable/learn_button" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/splash" />

    <ImageButton
        android:id="@+id/flyer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/play_button"
        android:layout_below="@+id/play_button"
        android:layout_marginTop="33dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/play_button"
        android:src="@drawable/play_flyer" />

    <ImageButton
        android:id="@+id/voice_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/learn_button"
        android:layout_below="@+id/learn_button"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/learn_button"
        android:src="@drawable/voice" />

    <ImageButton
        android:id="@+id/reward_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/voice_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/learn_button"
        android:src="@drawable/voice" />

    <ImageView
        android:id="@+id/image_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_logo"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/search" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_search"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/play_button"
        android:src="@drawable/play_pipe" />

</RelativeLayout>